--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "python.linting.flake8Enabled": false,
     "python.linting.enabled": true,
     "python.formatting.provider": "yapf",
-    "python.linting.pycodestyleEnabled": true
+    "python.linting.pycodestyleEnabled": true,
+    "powermode.enabled": true,
+    "powermode.comboThreshold": 5,
+    "powermode.presets": "flames"
 }
