Add Driver location features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
     "powermode.enabled": true,
     "powermode.comboThreshold": 5,
     "powermode.presets": "flames",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "cSpell.ignoreWords": [
+        "id",
+        "order"
+    ]
 }
