--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,7 @@ social-auth-core==0.2.1
 stripe==1.37.0
 whitenoise==3.2.1
 python-dotenv==0.10.3 
+libpq-dev 
+postgresql 
+postgresql-contrib
 psycopg2==2.7.2 
