--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ stripe==1.37.0
 whitenoise==3.2.1
 python-dotenv==0.10.3 
 psycopg2==2.7.3.2 
+
+boto3==1.4.1
+botocore==1.4.93
+django-storages==1.5.1
+django-storages-redux==1.3.2
